# my-domains-info

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  supervisord.conf
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: run.py
backend/app/adapters/api/: main.py
backend/app/adapters/api/routes/: domain_info.py
backend/app/application/: domain_info.py
backend/app/core/: enums.py  server.py  settings.py  uow.py  utils.py
backend/app/core/di/: __init__.py  _container.py
backend/app/db/: providers.py
backend/app/db/models/: __init__.py  base.py  domain_info.py
backend/app/db/repositories/: base.py  domain_info.py
backend/app/infrastructure/: base.py  crt_sh_client.py  ipinfo_client.py  ipwhois_client.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: bb9a75e5718e_add_domain_type.py  d8eff2462bf7_init_models.py  e1183f345fd1_remove_subdomains_add_dns_settings.py
backend/app/schemas/: domain_info.py
backend/tests/: conftest.py
backend/tests/unit/: test_base_requests_client.py  test_domain_info_repository.py  test_domain_info_service.py  test_frontend_mount.py  test_routes_domain_info.py  test_routes_utils.py  test_schemas_domain_info.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: domain.ts
frontend/src/components/: AddDomainModal.vue  DomainTable.vue  HelloWorld.vue  ToastContainer.vue
frontend/src/composables/: useDomainInfo.ts  useDomains.ts  useToast.ts
frontend/src/pages/: DomainInfoPage.vue
frontend/src/types/: domain.ts
frontend/src/views/: HomeView.vue
nginx/: nginx.conf
